# poe_crafting

./: .gitignore  Cargo.toml  index.html
.cargo/: config.toml
assets/: sw.js
examples/: random_crafts.rs  strategy.rs
examples/llm_stuff/: explanation.md  main.rs
src/: crafting.rs  currency.rs  explanation.md  hashvec.rs  io.rs  item_state.rs  lib.rs  main.rs  omen.rs  parser.rs  parser_coe.rs  parser_dat.rs  parser_poe2db.rs  parser_stat_desc.rs  strategy.rs  types.rs
src/internal/: mod.rs
src/parsers/: coe.rs  dat.rs  mod.rs  poe2db.rs  stat_desc.rs
src/ui/: mod.rs
src/ui/components/: currency_selection.rs  mod.rs
src/ui/pages/: currency_sim.rs  item_builder.rs  mod.rs  strategy_sim.rs  ui_debug.rs
src/util/: rand.rs
