[package]
name = "poe_crafting"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
csv = "1.3.1"
eframe = "0.32.3"
egui = "0.32.3"
itertools = "0.14.0"
rand = "0.9.2"
random_choice = "0.3.2"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = "3.14.0"
tl = "0.7.8"

[features]
embed_data = []

[[example]]
name = "random_crafts"

[[example]]
name = "llm_stuff"

[[example]]
name = "strategy"

[[bin]]
name = "bake_assets"

[[bin]]
name = "app"
