[package]
name = "poe_crafting"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
csv = "1.3.1"
eframe = "0.32.3"
egui = "0.32.3"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.28"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = "3.14.0"

# Can't get LSP hints with conditional comp, so just lump em all in
rand = "0.9.2"
getrandom = {version = "0.3.3", features = ["wasm_js"]}
wasm-bindgen-futures = "0.4.54"
web-sys = "0.3.81"
gloo-timers = {version = "0.3.0", features = ["futures"]}

[features]
embed_data = []

[[example]]
name = "random_crafts"

[[example]]
name = "llm_stuff"

[[example]]
name = "strategy"

[[bin]]
name = "bake_assets"

[[bin]]
name = "app"
